[gd_scene load_steps=30 format=2]

[ext_resource path="res://BaseMap.gd" type="Script" id=1]
[ext_resource path="res://LightViewport.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Lamp.tscn" type="PackedScene" id=4]
[ext_resource path="res://LightInteractor.shader" type="Shader" id=5]
[ext_resource path="res://Images/tree_1.png" type="Texture" id=6]
[ext_resource path="res://ObjectSprite.gd" type="Script" id=7]
[ext_resource path="res://Images/tree_2.png" type="Texture" id=8]
[ext_resource path="res://Images/tree_3.png" type="Texture" id=9]
[ext_resource path="res://Images/tree_4.png" type="Texture" id=10]
[ext_resource path="res://Images/tree_5.png" type="Texture" id=11]
[ext_resource path="res://Images/tree_6.png" type="Texture" id=12]
[ext_resource path="res://Images/bush_1.png" type="Texture" id=13]
[ext_resource path="res://Images/bush_2.png" type="Texture" id=14]
[ext_resource path="res://Images/bush_3.png" type="Texture" id=15]
[ext_resource path="res://Images/bush_4.png" type="Texture" id=16]
[ext_resource path="res://Images/bush_5.png" type="Texture" id=17]
[ext_resource path="res://Images/bush_6.png" type="Texture" id=18]
[ext_resource path="res://MainHouse.tscn" type="PackedScene" id=19]
[ext_resource path="res://Images/Test 4.png" type="Texture" id=20]
[ext_resource path="res://DayNightFilter.tscn" type="PackedScene" id=21]
[ext_resource path="res://ControlLayer.tscn" type="PackedScene" id=22]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 5 )

[node name="BaseMap" type="Node2D"]
script = ExtResource( 1 )

[node name="LightViewport" parent="." instance=ExtResource( 2 )]
handle_input_locally = false
gui_disable_input = true

[node name="Elements" type="Node2D" parent="."]

[node name="Player" parent="Elements" instance=ExtResource( 3 )]

[node name="Lights" type="Node2D" parent="Elements"]
editor/display_folded = true

[node name="Lamp" parent="Elements/Lights" instance=ExtResource( 4 )]
position = Vector2( 708, 432 )

[node name="Lamp5" parent="Elements/Lights" instance=ExtResource( 4 )]
position = Vector2( 118, 432 )

[node name="Lamp2" parent="Elements/Lights" instance=ExtResource( 4 )]
position = Vector2( 708, 662 )

[node name="Lamp6" parent="Elements/Lights" instance=ExtResource( 4 )]
position = Vector2( 118, 662 )

[node name="Lamp3" parent="Elements/Lights" instance=ExtResource( 4 )]
position = Vector2( 518, 742 )

[node name="Lamp8" parent="Elements/Lights" instance=ExtResource( 4 )]
position = Vector2( 518, 332 )

[node name="Lamp4" parent="Elements/Lights" instance=ExtResource( 4 )]
position = Vector2( 298, 742 )

[node name="Lamp7" parent="Elements/Lights" instance=ExtResource( 4 )]
position = Vector2( 298, 332 )

[node name="Lamp9" parent="Elements/Lights" instance=ExtResource( 4 )]
position = Vector2( 420, 532 )

[node name="Tree1" type="Sprite" parent="Elements" groups=[
"Object",
]]
material = SubResource( 1 )
position = Vector2( 203, 430 )
texture = ExtResource( 6 )
script = ExtResource( 7 )

[node name="Tree2" type="Sprite" parent="Elements"]
material = SubResource( 2 )
position = Vector2( 595, 470 )
texture = ExtResource( 8 )
script = ExtResource( 7 )

[node name="Tree3" type="Sprite" parent="Elements" groups=[
"Object",
]]
material = SubResource( 3 )
position = Vector2( 299, 430 )
texture = ExtResource( 9 )
script = ExtResource( 7 )

[node name="Tree4" type="Sprite" parent="Elements"]
material = SubResource( 4 )
position = Vector2( 202, 662 )
texture = ExtResource( 10 )
script = ExtResource( 7 )

[node name="Tree5" type="Sprite" parent="Elements"]
material = SubResource( 5 )
position = Vector2( 298, 661 )
texture = ExtResource( 11 )
script = ExtResource( 7 )

[node name="Tree6" type="Sprite" parent="Elements"]
material = SubResource( 6 )
position = Vector2( 592, 703 )
texture = ExtResource( 12 )
script = ExtResource( 7 )

[node name="Bush1" type="Sprite" parent="Elements"]
material = SubResource( 7 )
position = Vector2( 184, 507 )
texture = ExtResource( 13 )
script = ExtResource( 7 )

[node name="Bush2" type="Sprite" parent="Elements"]
material = SubResource( 7 )
position = Vector2( 233, 507 )
texture = ExtResource( 14 )
script = ExtResource( 7 )

[node name="Bush3" type="Sprite" parent="Elements"]
material = SubResource( 7 )
position = Vector2( 494, 434 )
texture = ExtResource( 15 )
script = ExtResource( 7 )

[node name="Bush4" type="Sprite" parent="Elements"]
material = SubResource( 7 )
position = Vector2( 541, 434 )
texture = ExtResource( 16 )
script = ExtResource( 7 )

[node name="Bush5" type="Sprite" parent="Elements"]
material = SubResource( 7 )
position = Vector2( 270, 735 )
texture = ExtResource( 17 )
script = ExtResource( 7 )

[node name="Bush6" type="Sprite" parent="Elements"]
material = SubResource( 7 )
position = Vector2( 318, 735 )
texture = ExtResource( 18 )
script = ExtResource( 7 )

[node name="MainHouse" parent="Elements" instance=ExtResource( 19 )]
position = Vector2( 370, 180 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 418, 440 )
texture = ExtResource( 20 )

[node name="DebugSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 599, 670 )

[node name="FilterZCalculator" type="CanvasLayer" parent="."]

[node name="DayNightFilter" parent="FilterZCalculator" instance=ExtResource( 21 )]
mouse_filter = 2

[node name="ControlLayer" parent="." instance=ExtResource( 22 )]
layer = 3
